# logit-scope

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/workflows/: build.yml
cmake/: EmbedWeb.cmake  web_assets.cpp.in
include/logit_scope/: engine.h  rank_profile.h
src/: engine.cpp  main.cpp  rank_profile.cpp  server.cpp  server.h  web_assets.h
tests/: rank_profile_tests.cpp
web/: app.js  index.html  style.css
